@@ -1,6 +1,6 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2015-2019, 2022 Laboratoire de Recherche et Développement
-// de l'Epita (LRDE).
+// Copyright (C) 2015-2019, 2022, 2023 Laboratoire de Recherche et
+// Développement de l'Epita (LRDE).
 //
 // This file is part of Spot, a model checking library.
 //
@@ -205,7 +205,7 @@ namespace spot
             }
           else
             {
-              e.cond = bdd_exist(e.cond, rem);
+              e.cond = bdd_restrict(e.cond, rem);
             }
       }
 
